--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{
     padding: 38px 0 48px;
 }
 
-.heder_flex, .footer_flex, .about, .subscribe{
+.heder_flex, .footer_flex, .about, .subscribe, .plan_flex{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -132,4 +132,78 @@ margin-bottom: 50px;
 
 .input:focus{
     outline: none;
+}
+
+.plan{
+    margin-bottom: 132px;
+
+}
+
+.plan_title{
+    font-weight: bold;
+    font-size: 60px;
+    line-height: 70px;
+    letter-spacing: -1.87579px;
+    color: #191918;
+    max-width: 504px;
+    margin-bottom: 110px;
+}
+
+.item{
+    width: 330px;
+    background: #F8F8F8;
+    border-radius: 10px;
+    text-align: center;
+    padding: 34px 0 27px;
+}
+
+.item:hover{
+    transition: 500ms;
+    background: #ff7143;
+    box-shadow: 0px 32px 34px rdb(255, 112, 59, 0.317827);
+}
+
+.item_text{
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: -0.562737px;
+    color: #696871;
+}
+.item:hover .item_text, .item:hover .item_title, .item:hover .item_li{
+    color: white;
+    transition: 500ms;
+}
+
+.item_title{
+    font-weight: bold;
+    font-size: 60px;
+    line-height: 56px;
+    letter-spacing: -1.03448px;
+    color: #1D293F;
+    margin: 22px 0 28px;
+}
+
+.item_title span{
+    font-size: 28px;
+}
+
+.item_li{
+    list-style: none;
+    font-size: 17px;
+    line-height: 50px;
+    letter-spacing: -0.531474px;
+    color: #696871;
+}
+
+.button_item{
+    width: 285px;
+    background: white;
+    color: #5454d4;
+    margin-top: 36px;
+}
+
+.item:hover .button_item{
+    background: #9f3919;
+    color: white;
+    transition: 500ms;
 }
