--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{
     padding: 38px 0 48px;
 }
 
-.heder_flex, .footer_flex, .about, .subscribe, .plan_flex{
+.header_flex, .footer_flex, .about, .subscribe, .plan_flex{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -206,4 +206,74 @@ margin-bottom: 50px;
     background: #9f3919;
     color: white;
     transition: 500ms;
+}
+
+@media screen and (max-width: 550px ){
+    .container{
+        max-width: 375px;
+    }
+    .header .nav, .header .header_button-container{
+        display: none;
+    }
+
+    .header_flex{
+        justify-content: center;
+    }
+
+    .about {
+        flex-direction: column;
+        text-align: center;
+        margin: 50px auto;
+    }
+
+    .about_title {
+        font-size: 60px;
+        line-height: 60px;
+    }
+
+    .button {
+        width: 100%;
+    }
+
+    .button_transparent {
+        margin-left: 0;
+        margin-top: 30px;
+    }
+
+    .about img {
+        width: 100%;
+    }
+
+    .subscribe{
+        flex-direction: column-reverse;
+    }
+
+    .input{
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    .img_container{
+        margin-top: 30px;
+    }
+     
+    .plan_title{
+        text-align: center;
+    }
+
+    .plan_flex{
+        flex-direction: column;
+    }
+
+    .item:not(:last-of-type){
+        margin-bottom: 30px;
+    }
+
+    .item .button{
+        width: 80%;
+    }
+
+    .footer_flex{
+        flex-direction: column;
+    }
 }
